--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -5,8 +5,8 @@
   
     padding: 2%;
     flex: 1 16%;
-  
-    background-color: #fff;
+  border-radius: 13px;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
   }
   
