--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -29,35 +29,30 @@
     width: 100%;
     height: auto;
   }
-  .container .btn1 {
+  .container .btn-flot {
     position: absolute;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    opacity: 0;
+  }
+  .container .btn1 { 
     top: 50%;
     left: 20%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  
-    color: white;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    opacity: 0;
   }
+
   .container .btn2 {
-    position: absolute;
+   
     top: 50%;
     left: 80%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    color: white;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    opacity: 0;
+   
   }
-  .container .btn:hover {
+
+  .container:hover .btn {
     opacity: 1;
   }
